# stress-test-bot

./: .gitignore  README.md  pyproject.toml
configs/: urls.json
configs/profiles/: altmiz.json  zaedl-vps.json  zaedl.json
deploy/: install-vps.sh  stress-test-bot.service
stressbot/: __main__.py  browser.py  cli.py  config.py  fake_data.py  http_session.py  metrics.py
stressbot/profiles/: __init__.py  altmiz.py  base.py  zaedl.py
stressbot/runners/: __init__.py  continuous_pool.py  interval_scheduler.py
tests/: test_fake_data.py  test_http_session.py  test_interval_scheduler.py  test_zaedl_steps_unit.py
