[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stress-test-bot"
version = "0.1.0"
description = "CLI stress tester for fin-core storefront journeys (Zaedl, Altmiz)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
stressbot = "stressbot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["stressbot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
